# Project_Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/nginx/: work-assistant.conf
deploy/systemd/: work-assistant.service
docs/: deployment.md
docs/superpowers/specs/: 2026-05-05-dingtalk-ai-work-assistant-design.md
src/work_assistant/: bootstrap.py  config.py  db.py  main.py  models.py  repositories.py  scheduler.py  schemas.py
src/work_assistant/dingtalk/: client.py  router.py  security.py
src/work_assistant/llm/: __init__.py  base.py  factory.py  fake.py  qwen.py
src/work_assistant/services/: assistant_service.py  report_service.py
tests/: test_assistant_service.py  test_bootstrap.py  test_config.py  test_db.py  test_dingtalk_client.py  test_dingtalk_router.py  test_dingtalk_security.py  test_health.py  test_llm_factory.py  test_llm_fake.py  test_qwen_provider.py  test_report_service.py  test_repositories.py
